<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.CreditScoreDetailsActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/baseline_arrow_back_ios_new_black_36dp" />

        <LinearLayout
            android:id="@+id/ln_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_back"
            android:orientation="vertical">




            <app.futured.donut.DonutProgressView
                android:id="@+id/donut_view"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                app:donut_animateChanges="true"
                app:donut_animationDuration="1000"
                app:donut_animationInterpolator="@android:interpolator/decelerate_quint"
                app:donut_bgLineColor="@color/cloud"
                app:donut_direction="anticlockwise"
                app:donut_gapAngle="270"
                app:donut_gapWidth="50"
                app:donut_strokeCap="round"
                app:donut_strokeWidth="4dp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_credit_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:text="Max score"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_max_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:text="Max score"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:text="@string/credit_score_info"
                android:textStyle="bold"
                android:textColor="@color/black"

                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/div_status"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_div_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/equifax_score_band_description"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_equifax_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/percentage_of_credit_used"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_percentage_of_credit_used"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/personal_type"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_personal_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>
</layout>